force-app/main/default/objects/ACSFCCP_HistoricalReportData__c/fields/Maximum_queued_time__c.field-meta.xml
<CustomField>
    <fullName>Maximum_queued_time__c</fullName>
    <label>Maximum queued time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>