force-app/main/default/objects/ACSFCCP_HistoricalReportData__c/fields/Nonproductive_time__c.field-meta.xml
<CustomField>
    <fullName>Nonproductive_time__c</fullName>
    <label>Nonproductive time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>