force-app/main/default/objects/ACSFCCP_HistoricalReportData__c/fields/Nonproductive_time_hms__c.field-meta.xml
<CustomField>
  <fullName>Nonproductive_time_hms__c</fullName>
  <formula>IF((FLOOR(Nonproductive_time__c/3600))&lt;10, &quot;0&quot; + TEXT(FLOOR(Nonproductive_time__c/3600)), TEXT(FLOOR(Nonproductive_time__c/3600))) + &quot;:&quot; + IF ((MOD(Nonproductive_time__c,3600)/60)&lt;10, &quot;0&quot; + TEXT(FLOOR(MOD(Nonproductive_time__c,3600)/60)), TEXT(FLOOR(MOD(Nonproductive_time__c,3600)/60))) + &quot;:&quot; + IF((MOD(MOD(Nonproductive_time__c,3600),60))&lt;10, &quot;0&quot;+TEXT(FLOOR(MOD(MOD(Nonproductive_time__c,3600),60))), TEXT(FLOOR(MOD(MOD(Nonproductive_time__c,3600),60))))</formula>
  <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
  <label>Nonproductive_time_hms</label>
  <type>Text</type>
</CustomField>