force-app/main/default/objects/ACSFCCP_HistoricalReportData__c/fields/Not_Available_time__c.field-meta.xml
<CustomField>
    <fullName>Not_Available_time__c</fullName>
    <label>Not Available time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>