force-app/main/default/objects/ACSFCCP_HistoricalReportData__c/fields/Online_time__c.field-meta.xml
<CustomField>
    <fullName>Online_time__c</fullName>
    <label>Online time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>