force-app/main/default/objects/ACSFCCP_HistoricalReportData__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <label>Queue</label>
    <length>80</length>
    <type>Text</type>
</CustomField>