force-app/main/default/objects/ACSFCCP_HistoricalReportData__c/fields/Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Report_Id__c</fullName>
    <label>Report Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>