force-app/main/default/objects/ACSFCCP_HistoricalReportData__c/fields/Routing_Profile__c.field-meta.xml
<CustomField>
    <fullName>Routing_Profile__c</fullName>
    <label>Routing Profile</label>
    <length>80</length>
    <type>Text</type>
</CustomField>