force-app/main/default/objects/ACSFCCP_HistoricalReportData__c/fields/Service_level_15_seconds__c.field-meta.xml
<CustomField>
    <fullName>Service_level_15_seconds__c</fullName>
    <label>Service level 15 seconds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>