force-app/main/default/objects/ACSFCCP_HistoricalReportData__c/fields/StartInterval__c.field-meta.xml
<CustomField>
    <fullName>StartInterval__c</fullName>
    <label>Start Interval</label>
    <type>DateTime</type>
</CustomField>